# minitools

./: .dockerignore  .env.docker.example  .gitignore  Dockerfile  GPU_SETUP.md  Makefile  README.md  arxiv.sh  docker-compose.mac.yml  docker-compose.windows.yml  docker-compose.yml  docker-entrypoint.sh  get_arxiv_summary_in_japanese.py  get_youtube_summary_in_japanese.py  pyproject.toml  settings.yaml.example  setup-mac.sh  setup-windows.ps1
docs/: arxiv_async_usage.md  docker-gmail-auth.md  gmail_alerts_parallel_processing.md  medium_daily_digest_async_usage.md  medium_daily_digest_error_fixes.md
docs/core/: CHANGELOG.md  api-reference.md  architecture.md  dev-guidelines.md  diagrams.md  repo-structure.md
docs/ideas/: 20260123-weekly-ai-digest.md  20260125-arxiv-weekly-digest.md  20260202-weekly-digest-performance.md  20260212-medium-full-translation.md
minitools/: __init__.py
minitools/collectors/: __init__.py  arxiv.py  google_alerts.py  medium.py  x_trend.py  youtube.py
minitools/llm/: __init__.py  base.py  embeddings.py  langchain_gemini.py  langchain_ollama.py  langchain_openai.py  ollama_client.py  openai_client.py
minitools/processors/: __init__.py  arxiv_weekly.py  duplicate_detector.py  full_text_translator.py  summarizer.py  translator.py  weekly_digest.py  x_trend.py
minitools/publishers/: __init__.py  notion.py  notion_block_builder.py  slack.py
minitools/readers/: __init__.py  notion.py
minitools/researchers/: __init__.py  trend.py
minitools/scrapers/: __init__.py  markdown_converter.py  medium_scraper.py
minitools/utils/: __init__.py  config.py  logger.py
outputs/: audio_transcript.txt  youtube_summary.txt
script/: get_arxiv_summary_in_japanese.py  get_youtube_summary_in_japanese.py  gmail_alerts_to_notion_and_slack.py  google_alerts_to_notion_and_slack.py  medium_daily_digest_to_notion.py  medium_daily_digest_to_notion_and_slack.py
scripts/: arxiv.py  arxiv_weekly.py  google_alert_weekly_digest.py  google_alerts.py  medium.py  medium_translate.py  weekly_digest.py  x_followings.py  x_trend.py  youtube.py
src/: get_arxiv_summary_in_japanese.py  get_youtube_summary_in_japanese.py
tests/: __init__.py  conftest.py  test_arxiv_weekly.py  test_duplicate_detector.py  test_full_text_translator.py  test_markdown_converter.py  test_medium_collector.py  test_medium_scraper.py  test_notion_arxiv.py  test_notion_block_builder.py  test_notion_publisher.py  test_slack_arxiv_format.py  test_slack_x_trend_format.py  test_trend_researcher.py  test_weekly_digest.py  test_x_trend_collector.py  test_x_trend_processor.py
utils/: logger.py
