[project]
name = "minitools"
version = "0.1.0"
description = "A collection of automation tools for content aggregation and processing"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "aiohttp>=3.12.14",
    "bs4>=0.0.2",
    "feedparser>=6.0.11",
    "google-api-python-client>=2.176.0",
    "google-auth>=2.40.3",
    "google-auth-oauthlib>=1.2.2",
    "notion-client<2.5.0",
    "ollama>=0.5.1",
    "pandas>=2.3.0",
    "python-dotenv>=1.1.0",
    "pyyaml>=6.0",
    "requests>=2.32.4",
    "pytz>=2024.1",
    "yt-dlp>=2024.1.0",
    "brotli>=1.1.0",
    "cloudscraper>=1.2.71",
    "playwright>=1.57.0",
    "ruff>=0.14.10",
]

[project.optional-dependencies]
whisper = [
    "scipy==1.14.1",
    "mlx-whisper>=0.1.0",
]

[project.scripts]
arxiv = "scripts.arxiv:main"
medium = "scripts.medium:main"
google-alerts = "scripts.google_alerts:main"
youtube = "scripts.youtube:main"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["minitools", "scripts"]

[tool.uv]
package = true
